# speech-analysis

./: .gitignore  CMakeLists.txt  README.md  build-rel.sh  package.json  webpack.monkey.js
lib/: CMakeLists.txt
lib/FFT/: FFT.cpp
public/: index.html
public/js/: main.js  speech_analysis.js  speech_capture.js
src/: App.css  App.js  CMakeLists.txt  index.css  index.js
src/analyser/: AudioCapture.js  speech_analysis.js
src/analysis/: Analyser.cpp  Analyser.h  Analyser_mainLoop.cpp
src/audio/: AudioCapture.cpp  AudioCapture.h
src/components/: AnalyserCanvas.js  Footer.js
wasm/: CMakeLists.txt
wasm/analysis/: Analyser.cpp  Analyser.h  Analyser_get.cpp  Analyser_mainLoop.cpp  Analyser_params.cpp  bindings.cpp
wasm/analysis/parts/: median.cpp
wasm/audio/: AudioCapture.cpp  AudioCapture.h  RingBuffer.cpp  RingBuffer.h  bindings.cpp  main.cpp  processor.js
